<?xml version="1.0" encoding="utf-8"?>
<!-- <?xml version="1.0" encoding="utf-8"?> -->
<!-- <resources> -->


<!-- <string name="app_name">QZoneDemo</string> -->
<!-- <string name="test_name">跳转页面</string> -->
<!-- <string name="action_settings">Settings</string> -->
<!-- <string name="hello_world">Hello world!</string> -->


<!-- </resources> -->
<resources>

    <string name="app_name">物流车辆智能监控系统</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="main_mylocation">我的位置</string>
    <string name="main_check_task">任务查看</string>
    <string name="main_news_center">物品溯源</string>
    <string name="main_motor_list">个人中心</string>
    <string name="main_car_list">目标列表</string>
    <string name="main_run_record">行车记录</string>
    <string name="main_check_oil">油表查看</string>
    <string name="main_manage_storage">仓库管理</string>
    <string name="main_settings">设置</string>
    <string name="main_mileage_sum">里程统计</string>
    <string name="main_report_center">报表中心</string>
    <string name="report_device_mileage">设备里程汇总表</string>
    <string name="report_device_warn">设备报警列表</string>
    <string name="overspeed_warn">超速报警</string>
    <string name="electricity_warn">断电报警</string>
    <string name="oilvolumn_warn">油耗异常报警</string>
    <string name="day_device_oilvolumn">设备当日油耗</string>
    <string name="report_day_performance">当日绩效</string>
    <string name="report_month_performance">当月绩效</string>
    <string name="report_daily_vehicle">出勤车辆</string>
    <string name="report_outdaily_vehicle">未出勤车辆</string>
    <string name="remberpassword">记住密码</string>
    <string name="auto_login">自动登陆</string>
    <string name="copyright0">MapTone for Android V</string>
    <string name="password">Please input password</string>
    <string name="user">Please input user name</string>
    <string name="submit">确定</string>
    <string name="reset">重置</string>
    <string name="gz">跟踪</string>
    <string name="hf">回放</string>
    <string name="jk">监控</string>
    <string name="car_files">车辆档案</string>
    <string name="action_settings">Settings</string>
    <string name="test_name">跳转页面</string>
    <string name="cancel">取消</string>
    <string name="bdnav">百度导航</string>

    <!-- 自定义控件 -->
    <string name="hello">Hello World, XListViewActivity!</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="mhzdsx">秒之后刷新</string>

    <!-- 设备信息tab -->
    <string name="dev_tab_1">目标详情</string>
    <string name="dev_tab_2">运行信息</string>
    <string name="dev_tab_3">报警信息</string>
    <string name="dev_tab_4">统计报表</string>
    <string name="title_activity_goods">GoodsActivity</string>
    <string name="title_activity_goods_trace">GoodsTraceActivity</string>

    <!-- 任务查看 -->
    <string name="plan_vehicle_no">车辆编号</string>
    <string name="plan_startPosition">发车点：</string>
    <string name="plan_endPosition">目标点：</string>
    <string name="plan_distance">距离：</string>
    <string name="plan_goods">物品：</string>
    <string name="plan_noData">暂无数据</string>
    <string name="plan_create_time">建立时间：</string>
    <string name="plan_status">状态：</string>
    <string name="plan_progress">进度：</string>
    <string name="title_activity_plans_transport">PlansTransportActivity</string>
    <string name="title_activity_plan_detail">PlanDetailActivity</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>

    <!-- 个人中心 -->
    <string name="user_center">个人中心</string>
    <string name="user_name">用户姓名</string>
    <string name="user_info">个人信息</string>
    <string name="user_password_update">修改密码</string>
    <string name="user_feedback">反馈意见</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="title_activity_show_user_profile">ShowUserProfileActivity</string>

</resources>
