<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/plan_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- 车辆编号 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal" >

	        <TextView
	            android:id="@+id/plan_vehicle_no"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/plan_vehicle_no"
	            android:textSize="20sp" 
	            android:textColor="#1e90ff"/>
        </LinearLayout>
        
        
        <!-- 发车点&目标点 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="horizontal" >

            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_startPosition"
                android:textSize="15sp"
                android:textColor="#000"/>
            <TextView 
                android:id="@+id/plan_startPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_noData"
                android:textSize="15sp"
                android:textColor="#ff3e96"
                android:ellipsize="end"
                android:singleLine="true"
                android:maxWidth="110dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/plan_endPosition"
                android:textColor="#000"
                android:textSize="15sp" />

            <TextView 
                android:id="@+id/plan_endPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_noData"
                android:textSize="15sp"
                android:textColor="#ff3e96"
                android:ellipsize="end"
                android:singleLine="true"
                android:maxWidth="110dp"
                />
            
        </LinearLayout>
        
        
        <!-- 创建时间&状态 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp" >

            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_create_time"
                android:textSize="15sp"
                android:textColor="#000"/>
            <TextView 
                android:id="@+id/plan_crate_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_noData"
                android:textSize="15sp"
                android:textColor="#ff3e96"
                />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/plan_status"
                android:textColor="#000"
                android:textSize="15sp" />

            <TextView 
                android:id="@+id/plan_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_noData"
                android:textSize="15sp"
                android:textColor="#ff3e96"
                />
        </LinearLayout>

        
        
        

    </LinearLayout>

    <!-- 任务进度 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/plan_content"
        android:layout_marginLeft="8dp" >

            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_progress"
                android:textSize="15sp"
                android:textColor="#000"/>

            <ProgressBar
                android:id="@+id/plan_progressBar"
                style="@style/plan_progressbar"
                android:layout_width="230dp"
                android:layout_height="3dp"
                android:layout_gravity="center_vertical|center"
                android:max="1000"
                android:progress="5" />
            
    </LinearLayout>
    
    
    <!-- 图标 -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="8dp"
        android:background="@drawable/into_icon" >

	</ImageView>
</RelativeLayout>
