<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/plan_detail_relativelayout_top"
        android:layout_width="fill_parent"
        android:layout_height="48.0dip"
        android:layout_alignParentTop="true"
        android:background="@color/main_tab_bg" >

        <ImageView
            android:id="@+id/plan_detail_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="4.0dip"
            android:src="@drawable/return_shouye_background" />

        <TextView
            android:id="@+id/tab5_rl_tv"
            android:layout_width="wrap_content"
            android:layout_height="45.0dip"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="任务详情"
            android:textColor="#ffffffff"
            android:textSize="18.0dip" />

    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/plan_detail_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/plan_detail_relativelayout_top"
        android:orientation="vertical" >

        <!-- 车辆编号 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal" >

	        <TextView
	            android:id="@+id/plan_detail_vehicle_no"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/plan_vehicle_no"
	            android:textSize="22sp" 
	            android:textColor="#1e90ff"/>
        </LinearLayout>
        
        <!-- 发车点 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="horizontal" >

            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_startPosition"
                android:textSize="18sp"
                android:textColor="#000"/>
            <TextView 
                android:id="@+id/plan_detail_startPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_noData"
                android:textSize="18sp"
                android:textColor="#ff3e96"
                />
        </LinearLayout>

        <!-- 目标点 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_endPosition"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView 
                android:id="@+id/plan_detail_endPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_noData"
                android:textSize="18sp"
                android:textColor="#ff3e96"
                />
        </LinearLayout>
        
        <!-- 距离 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp" >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_distance"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView 
                android:id="@+id/plan_detail_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_noData"
                android:textSize="18sp"
                android:textColor="#ff3e96"
                />
        </LinearLayout>
        
        <!-- 物品 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp" >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_goods"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView 
                android:id="@+id/plan_detail_goods"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_noData"
                android:textSize="18sp"
                android:textColor="#ff3e96"
                />
        </LinearLayout>
        
        <!-- 创建时间 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp" >

            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_create_time"
                android:textSize="18sp"
                android:textColor="#000"/>
            <TextView 
                android:id="@+id/plan_detail_crate_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_noData"
                android:textSize="18sp"
                android:textColor="#ff3e96"
                />
        </LinearLayout>
        
        <!-- 任务状态 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp" >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_status"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView 
                android:id="@+id/plan_detail_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_noData"
                android:textSize="18sp"
                android:textColor="#ff3e96"
                />
        </LinearLayout>

        
        
        

    </LinearLayout>

    <!-- 进度条 -->
    <LinearLayout
        android:id="@+id/plan_detail_progressBar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/plan_detail_content"
        android:layout_marginLeft="8dp" >

            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_progress"
                android:textSize="18sp"
                android:textColor="#000"/>

            <ProgressBar
                android:id="@+id/plan_detail_progressBar"
                style="@style/plan_progressbar"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_gravity="center_vertical|center"
                android:layout_marginRight="8dp"
                android:max="1000"
                android:progress="0" />
            
        </LinearLayout>
        
    <!-- 地图 -->
    <com.baidu.mapapi.map.MapView
	    android:id="@+id/plan_detail_bmapView"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_alignParentBottom="true"
	    android:layout_below="@+id/plan_detail_progressBar_layout"
	    android:clickable="true" />

</RelativeLayout>
