<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/info_panel_bg"
    tools:context="com.hbjy.carlocation.UserProfileActivity" >

    <RelativeLayout
        android:id="@+id/relativelayout_top"
        android:layout_width="fill_parent"
        android:layout_height="48.0dip"
        android:layout_alignParentTop="true"
        android:background="@color/main_tab_bg" >

        <TextView
            android:id="@+id/plan_head_name"
            android:layout_width="wrap_content"
            android:layout_height="45.0dip"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/user_center"
            android:textColor="#ffffffff"
            android:textSize="18.0dip" />

        
    
    </RelativeLayout>
    
    <FrameLayout 
        android:id="@+id/frameLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativelayout_top"
        >

	    <LinearLayout
	        android:id="@+id/linearLayout1"
	        android:layout_width="wrap_content"
	        android:layout_height="207dp"
	        android:orientation="horizontal" >
	
	        <ImageView
	            android:id="@+id/imageView1"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:scaleType="matrix"
	            android:src="@drawable/icon_user_background" />

	    </LinearLayout>

	    <ImageView
	        android:id="@+id/user_placeholder"
	        android:layout_width="84dp"
	        android:layout_height="84dp"
	        android:layout_marginLeft="30dp"
	        android:layout_marginTop="50dp"
	        android:src="@drawable/icon_user_picture_placeholder" />
	    
	    <TextView
	        android:id="@+id/user_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="130dp"
	        android:layout_marginTop="90dp"
	        android:text="@string/user_name"
	        android:textColor="#fff"
	        android:textSize="20sp" />

    </FrameLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frameLayout1"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

	    <RelativeLayout
	        android:id="@+id/layout_user_info"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/relativelayout_bg"
	        android:clickable="true"
	        android:orientation="horizontal" >

	        <ImageView
	            android:id="@+id/imageView2"
	            android:layout_width="40dp"
	            android:layout_height="40dp"
	            android:layout_centerVertical="true"
	            android:layout_gravity="center_vertical"
	            android:layout_marginLeft="10dp"
	            android:padding="5dp"
	            android:src="@drawable/ico_user_center" />
	        
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerVertical="true"
	            android:layout_gravity="center_vertical"
	            android:layout_marginLeft="10dp"
	            android:layout_toRightOf="@id/imageView2"
	            android:text="@string/user_info"
	            android:textColor="#000"
	            android:textSize="20sp" />

	        <ImageView
	            android:id="@+id/imageView3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentBottom="false"
	            android:layout_alignParentLeft="false"
	            android:layout_alignParentRight="true"
	            android:layout_centerVertical="true"
	            android:layout_gravity="right|center_vertical"
	            android:layout_marginRight="10dp"
	            android:src="@drawable/into_icon" />
	    	    
		</RelativeLayout>
		
	    <RelativeLayout
	        android:id="@+id/layout_user_password"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:background="@drawable/relativelayout_bg"
	        android:orientation="horizontal" >

	        <ImageView
	            android:id="@+id/imageView4"
	            android:layout_width="40dp"
	            android:layout_height="40dp"
	            android:layout_centerVertical="true"
	            android:layout_gravity="center_vertical"
	            android:layout_marginLeft="10dp"
	            android:padding="3dp"
	            android:src="@drawable/ico_user_pwd1" />
	        
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerVertical="true"
	            android:layout_gravity="center_vertical"
	            android:layout_marginLeft="10dp"
	            android:layout_toRightOf="@id/imageView4"
	            android:text="@string/user_password_update"
	            android:textColor="#000"
	            android:textSize="20sp" />

	        <ImageView
	            android:id="@+id/imageView5"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentBottom="false"
	            android:layout_alignParentLeft="false"
	            android:layout_alignParentRight="true"
	            android:layout_centerVertical="true"
	            android:layout_gravity="right|center_vertical"
	            android:layout_marginRight="10dp"
	            android:src="@drawable/into_icon" />
	    	    
		</RelativeLayout>
		
	    <RelativeLayout
	        android:id="@+id/layout_user_feedback"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:background="@drawable/relativelayout_bg"
	        android:orientation="horizontal" >

	        <ImageView
	            android:id="@+id/imageView6"
	            android:layout_width="40dp"
	            android:layout_height="40dp"
	            android:layout_centerVertical="true"
	            android:layout_gravity="center_vertical"
	            android:layout_marginLeft="10dp"
	            android:padding="3dp"
	            android:src="@drawable/ico_user_info" />
	        
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerVertical="true"
	            android:layout_gravity="center_vertical"
	            android:layout_marginLeft="10dp"
	            android:layout_toRightOf="@id/imageView6"
	            android:text="@string/user_feedback"
	            android:textColor="#000"
	            android:textSize="20sp" />

	        <ImageView
	            android:id="@+id/imageView7"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentBottom="false"
	            android:layout_alignParentLeft="false"
	            android:layout_alignParentRight="true"
	            android:layout_centerVertical="true"
	            android:layout_gravity="right|center_vertical"
	            android:layout_marginRight="10dp"
	            android:src="@drawable/into_icon" />
	    	    
		</RelativeLayout>
	</LinearLayout>

</RelativeLayout>